# Elpidifor-s-legacy

./: CMakeLists.txt  README.md  optionals.hpp  tools.hpp
.cache/clangd/index/: test-picture.cpp.103A5CE694B90ECF.idx  tools.hpp.B1FC609AEDB84ED6.idx
.github/workflows/: build-example.yml  cmake.yml  cmake2.yml  unit.yml
Example/: .gitignore  CMakeLists.txt  Graph.out  makefile
Example/pluginsrc/: CMakeLists.txt  tools.hpp
Example/pluginsrc/MinTools/: MinTools.cpp  MinTools.hpp
Example/src/: Button.hpp  CMakeLists.txt  Color.hpp  CordsPair.hpp  Event.hpp  Image.cpp  Image.hpp  Main.cpp  Main.hpp  Primitives.cpp  Primitives.hpp  Tools.cpp  Tools.hpp  Utilities.cpp  Utilities.hpp  Widget.hpp  Window.cpp  Window.hpp
test/: test-picture.cpp
